Adding schedule-retry impl

--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
   },
   "author": "",
   "license": "MIT",
+  "peerDependencies": {
+    "rxjs": "^5.5.4"
+  },
   "devDependencies": {
+    "@types/chai": "^4.0.8",
     "@types/mocha": "^2.2.44",
+    "@types/sinon": "^4.0.0",
+    "@types/sinon-chai": "^2.7.29",
+    "chai": "^4.1.2",
     "mocha": "^4.0.1",
     "rimraf": "^2.6.2",
+    "rxjs": "^5.5.4",
+    "sinon": "^4.1.2",
+    "sinon-chai": "^2.14.0",
     "ts-loader": "^3.2.0",
+    "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "webpack-devserver": "0.0.6"
