--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,13 @@
     "outDir": "./dist",
     "noImplicitAny": true,
     "module": "commonjs",
+    "moduleResolution": "node",
     "target": "es5",
-    "allowJs": true
-  }
+    "allowJs": false,
+    "declaration": true
+  },
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
