--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "allowJs": false,
     "declaration": true
   },
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ]
+  "lib": [
+    "es2016"
+  ],
+  "include": ["src/**/*.ts"]
 }
