--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dotdeeka/rxjs-schedule-retry",
-  "version": "0.2.1",
+  "version": "0.2.2-0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
